# RWL

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/rwl/: Color.hpp  Log.hpp  Pen.hpp  PosDim.hpp  Vec2.hpp  Window.hpp  core.hpp  rwl.hpp
include/rwl/Drawables/: Drawable.hpp  DrawableBase.hpp  DrawableComm.hpp  Rect.hpp
include/rwl/Drawables/Rect/: Rect.hpp  RectBase.hpp  RectComm.hpp  RectPtrComm.hpp  RectRefComm.hpp
include/rwl/Window/: WinBase.hpp  WinComm.hpp  Window.hpp
src/: Color.cpp  Pen.cpp  PosDim.cpp  Window.cpp  core.cpp
src/Window/: WinBase.cpp  WinComm.cpp  Window.cpp
src/rwl/: Log.hpp  Vec2.hpp  rwl.hpp
src/rwl/Color/: Color.cpp  Color.hpp
src/rwl/Pen/: Pen.cpp  Pen.hpp
src/rwl/Window/: Window.cpp  Window.hpp
src/rwl/core/: core.cpp  core.hpp
